# protfrag

./: .gitattributes  .gitignore  QUICKSTART.md  README.md  dataset.csv  dataset.csv.bak  evaluate.py  main.py  mmseqs_easy_all_seqs.fasta  mmseqs_easy_cluster.tsv  mmseqs_easy_rep_seq.fasta  predictions_binary_from_dataloader.csv  pyproject.toml  requirements.txt  spec.txt  train.py
configs/: default.yaml
data/: all_seqs.fasta  datamodule.py  dataset.py
data/custom_fragments/: 01_analyze_fragment_distribution.ipynb  02_prepare_swissprot_data.ipynb  03a_generate_dataset1_maximum.ipynb  03b_generate_dataset2_augmented.ipynb  03c_generate_dataset3_distribution_matched.ipynb  README_DATASETS.md  build_fasta.ipynb  clean_data.csv  dataset1.fasta  dataset1_embeddings_12000.h5  dataset1_maximum_fragments.csv  dataset1_statistics.csv  dataset2.fasta  dataset2_embeddings_26000.h5  (+14 more)
example_configs/: default.yaml
experiments/: embedding_generation.ipynb  t5_trial.ipynb  uniprotkb_reviewed_true_AND_fragment_tr_2025_12_01.tsv
mmseqs_tmp/: latest
models/: fragment_detector.py
scripts/: 01_parse_uniprot_data.py  02_run_mmseqs.sh  03_create_train_val_test_splits.py  03_unpack_embeddings.py  04_precompute_embeddings.py  05_precompute_embeddings.py  ProtT5_precompute_embeddings_colab.ipynb  eval_binary.py  evaluate_model.py  fetch_uniprot_sets.py  make_balanced_splits.py  precompute_embeddings.py  prepare_dataset_from_uniprot.py  prepare_training.py  run_mmseqs_cluster.sh  visualize_embeddings.py
src/: __init__.py  data.py  metrics.py  model.py
utils/: pseudoperplexity.py
(+79 files in other folders)
